<resources>
    <!--TO DELETE-->
    <string name="travel1">Travel 1</string>
    <string name="travel2">Travel 2</string>
    <string name="travel3">Travel 3</string>
    <string name="travel4">Travel 4</string>
    <string name="travel5">Travel 5</string>
    <!--______________________________________-->

    <string name="app_name">MACC</string>
    <string name="add_travel">Add Travel</string>
    <string name="travel_name">Travel Name</string>
    <string name="destination">Destination</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add_participants">Add Participants</string>
    <string name="user_email">User Email</string>
    <string name="add_user_plus_icon">Add User Plus Icon</string>
    <string name="nome_cognome">Nome Cognome</string>
    <string name="nickname">Nickname</string>
    <string name="user_avatar">User Avatar</string>
    <string name="altro">Altro</string>
    <string name="search_travel">Search Travel</string>
    <string name="description_profile">Description</string>
    <string name="group_number_icon">group number icon</string>
    <string name="_4">4</string>
    <string name="delete_icon">delete icon</string>
    <string name="in_progress">In progress</string>
    <string name="expense_list">Expense List</string>
    <string name="day_1">Day 1</string>
    <string name="expense_name">Expense Name</string>
    <string name="mer">mer</string>
    <string name="_7">7</string>
    <string name="via_ostiense_125">Via Ostiense 125</string>
    <string name="group">Group</string>
    <string name="tot_15">Tot: $15</string>
    <string name="add_expense">add expense</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_the_password">Repeat the password</string>
    <string name="back">back</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="edit_personal_data">Edit Personal Data</string>
    <string name="macc_app">Macc App</string>
    <string name="settings">Settings</string>
    <string name="username_or_email_address">Username or email address</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="dropdown_arrow">dropdown arrow</string>
    <string name="expense_box">Expense box</string>
    <string name="day_circle">day circle</string>
    <string name="expense_menu_icon">expense menu icon</string>
    <string name="expense_location_icon">expense location icon</string>
    <string name="users">Users</string>
    <string name="name_surname">Name Surname</string>
    <string name="field1">Field 1</string>
    <string name="add_field_icon">Add field icon</string>
    <string name="notes">Notes</string>
    <string name="take_a_photo_of_the_receipt">Take a photo of the receipt</string>
    <string name="date">Date</string>
    <string name="place">Place</string>
    <string name="this_is_a_personal_expense">This is a personal Expense</string>
    <string name="description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="forgot_password_placeholder">Enter your Email address, we\'ll send you an email to reset your password</string>
    <string name="realtime_db_test">Test get() Realtime Database Firebase</string>
    <string name="choose_travel_cover">Choose travel cover</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="add_user">Add User</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">Save</string>
    <string name="name1">Name:</string>
    <string name="surname1">Surname:</string>
    <string name="nickname1">Nickname:</string>
    <string name="description1">Description:</string>
    <string name="change_avatar">change avatar</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="update_password">Update Password</string>
    <string name="edit">Edit</string>
    <string name="travel_name_1">Travel Name:</string>
    <string name="destination_1">Destination:</string>
    <string name="edit_travel">Edit Travel</string>
    <string name="expense_name_1">Expense Name:</string>
    <string name="type_expense_name">Type expense name</string>
    <string name="type_amount">Type amount</string>
    <string name="amount">Amount</string>
    <string name="amount_1">Amount:</string>
    <string name="date_1">Date:</string>
    <string name="type_date">Type date</string>
    <string name="place_1">Place:</string>
    <string name="type_place">Type place</string>
    <string name="notes_1">Notes:</string>
    <string name="type_notes">Type notes</string>
    <string name="expense_delete_icon">Expense delete icon</string>
    <string name="expense_edit_icon">Expense edit icon</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="take_photo">Take photo</string>
    <string name="load_photo">Load Photo</string>
    <string name="personal_expense">Personal Expense</string>
    <string name="load_amount">Load Amount</string>
    <string name="recognize_amount">Recognize amount</string>
    <string name="recognized_amount_1">Recognized amount:</string>
    <string name="take_the_amount">Take the amount</string>
    <string name="each">Each:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="google_logo">Google logo</string>
    <string name="facebook_logo">Facebook logo</string>
    <string name="twitter_logo">Twitter logo</string>
    <string name="web_client_id1">434440575685–9sr7arbjf462luked2f6kap6c1b00609.apps.googleusercontent.com</string>
    <string name="web_client_id2">434440575685-h8ri5ifnc2qjr1be6h77bitsq8chq630.apps.googleusercontent.com</string>
    <string name="android_client_id">434440575685–8tjgc86omnita0a184cu2hu561vi0lcm.apps.googleusercontent.com</string>
    <string name="userpos">UserPos</string>
    <string name="day_text">Day:</string>
    <string name="select_dates">Select dates</string>
    <string name="type">Type</string>
    <string name="tot_dots">Tot:</string>
    <string name="quit_travel">Quit Travel</string>
    <string name="or">Or</string>
    <string name="position">Position:</string>
    <string name="logo_application">logo_application</string>
    <string name="macc">MACC</string>

</resources>